# neuroembed-api

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.html  security_audit.md
examples/: cognitive_request.json  embeddings_request.json
scripts/: publish.sh
src/neuroembed/: __init__.py  cli.py  config.py  main.py  schemas.py
src/neuroembed/api/v1/: cognitive.py  embeddings.py
src/neuroembed/auth/: apikey.py  deps.py  store.py
src/neuroembed/core/: cognitive.py  eeg.py  reve.py
src/neuroembed/observability/: logging.py  metrics.py
src/neuroembed/static/: index.html
tests/unit/: test_auth.py  test_auth_endpoints.py  test_cognitive_endpoint.py  test_config.py  test_dashboard.py  test_eeg.py  test_embeddings_endpoint.py  test_main.py
