[project]
name = "neuroembed"
version = "0.1.0"
description = "Hosted REVE EEG foundation-model inference API"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "NeuroSaaS Loop" }]
keywords = ["eeg", "neuroscience", "foundation-model", "brain-computer-interface", "bci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# CPU-only minimal deps. The REVE model itself is loaded on demand in a
# separate worker process to keep the API process lean. See src/neuroembed/core/reve.py
# for the lazy import.
dependencies = [
    "fastapi>=0.115.0,<0.120.0",
    "uvicorn[standard]>=0.32.0,<0.40.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0,<0.30.0",
    "numpy>=1.26.0,<2.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.optional-dependencies]
# Heavy deps only required when actually loading the REVE model.
# Documented separately so CPU-only dev environments stay fast.
# torch upper-bound pinned at <2.12.0 to avoid CVE-2025-3000
# (memory corruption in torch.jit.script). Update when a fix is released.
model = [
    "torch>=2.5.0,<2.12.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "mne>=1.7.0",
    "braindecode>=1.3.0",
]
dev = [
    "ipython>=8.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
neuroembed-api = "neuroembed.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neuroembed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "model: marks tests that require REVE model weights (deselect with '-m \"not model\"')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC", "S", "RUF"]
ignore = [
    "E501",
    "S101",
    "B008",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
